# dxt

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  SECURITY.md  build.zig  build.zig.zon  pyproject.toml
.agent/research/: cross-database-architecture.md  dbt-core-compatibility.md  dbt-upstream-reference-map.md  governance-and-loop.md  m1-clean-command.md  m1-docs-block-slice.md  m1-generic-test-node-slice.md  m1-macro-arg-validation-slice.md  m1-macro-namespace-search-order-slice.md  m1-model-properties-slice.md  m1-parser-risk-review.md  m1-parser-slice.md  m1-seed-ref-slice.md  (+58 more)
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AGENT_OS.md  AGENT_PROTOCOLS.md  ARCHITECTURE.md  COMPATIBILITY.md  GITHUB_PROJECTS.md  MULTI_AGENT_WORKFLOW.md  PRIMER.md  README.md  RELEASES.md
scripts/: agent_os_orchestrator.py  check_agent_os_config.py  check_dbt_core_m1_oracle.py  check_jaffle_shop_duckdb_build.py  check_jaffle_shop_duckdb_compile.py  check_jaffle_shop_duckdb_docs.py  check_jaffle_shop_duckdb_ls.py  check_jaffle_shop_duckdb_parse.py  check_jaffle_shop_duckdb_run.py  check_public_safety.py  check_release_archive.py  check_runtime_boundary.py  codex_pull_plug.py  codex_tmux_supervisor.py  github_agent_os.py  hermes_codex_watchdog.py  install_hermes_codex_watchdog.py  native_zig_test_coverage_map.py  validate_manifest_schema.py  worktree_cleanup.sh  worktree_finish.sh  worktree_start.sh
src/: main.zig  project.zig  root.zig
src/dxt/: cli.py  (+1 more)
tests/: test_agent_os_orchestrator.py  test_cli.py  test_github_agent_os.py  test_public_safety.py
(+255 files in other folders)
