[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dxt"
version = "0.0.0"
description = "Data Transformation eXecutor: a dbt-project-compatible transformation engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "License pending" }
authors = [
  { name = "sabino" }
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
dxt = "dxt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
